update teaser video and approach figure

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
               <span class="author-block"><sup>2</sup>Harvard University</span>
             </div>
 
-            <div class="conference">
-              <span class="icml"><strong>ICML 2025</strong></span>
+            <div class="is-size-5 publication-authors">
+              <span class="author-block"><strong>ICML 2025</strong></span>
             </div>
 
             <div class="column has-text-centered">
@@ -151,7 +151,7 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <video id="teaser" autoplay muted loop playsinline height="100%">
-          <source src="materials/figures/comp_infer_teaser_animation" type="video/mp4">
+          <source src="materials/figures/comp_infer_teaser_animation.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -167,8 +167,7 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
-              Generative models have demonstrated remarkable abilities in generating high-fidelity visual content.
-              In this work, we explore how generative models can further be used not only to synthesize
+              We explore how generative models can further be used not only to synthesize
               visual content but also to understand the properties of a scene given a natural image.
               We formulate scene understanding as an inverse generative modeling problem,
               where we seek to find conditional parameters of a visual generative model to best
@@ -211,9 +210,7 @@
             <!-- <video autoplay muted loop playsinline height="100%">
             <source src="materials/figures/method_animation.mp4" type="video/mp4">
           </video> -->
-            <video autoplay muted loop controls playsinline width="100%">
-              <source src="materials/figures/diffusion_method_animation.mp4" type="video/mp4">
-            </video>
+            <img src="materials/figures/approach_overview_generic.pdf" class="gallery__img" alt="Image 2">
 
             <!-- Composition between factors is achieved by sampling images from a composed diffusion distribution. Similar to composition between energy functions, this allows individual factors to represent both global and local concepts, and enables the recombination of concepts across different models and datasets. However, unlike the underlying energy decomposition objective of COMET, Decomp Diffusion may directly be trained through denoising, a stable and less expensive learning objective, and leads to higher resolution images. -->
 
