--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ $\hat{\boldsymbol{c}}^1, \ldots, \hat{\boldsymbol{c}}^K = \text{argmin}_{\boldsy
           <br>
           <div class="content has-text-justified has-text-centered">
             <div class="column is-full-width">
-              <img src="materials/figures/obj_categories.png" width="600" height="400" alt="Multi-Modal Decomposition." />
+              <img src="materials/figures/obj_categories.png" width="600" height="400" alt="Multi-Modal Decomposition." style="display: block; margin: 0 auto;" />
               <p class="caption"><b>Zero-Shot Multi-Object Perception on Real-World Images.</b> </p>
             </div>
           </div>
