--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h1 class="title is-1 publication-title">Compositional Scene Understanding through Inverse Generative Modeling</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=~Yanbo_Wang3">Yanbo Wang</a><sup>1</sup>,
+                <a href="https://ywangattud.github.io/website/">Yanbo Wang</a><sup>1</sup>,
               </span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=dboVuDYAAAAJ&hl=en">Justin Dauwels</a><sup>1</sup>,
