--- a/index.html
+++ b/index.html
@@ -109,27 +109,28 @@
               <span class="author-block"><strong>ICML 2025</strong></span>
             </div>
 
-            <!--
+
             <div class="column has-text-centered">
               <div class="publication-links">
-
+<!--
                 <span class="link-block">
-                  <a href="https://openreview.net/pdf/6a53a10d59984c4ecee11dd1d94e05077e6b3c81.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/pdf/2505.21780" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
                     <span>Paper</span>
                   </a>
                 </span>
+                -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2406.19298" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2505.21780" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
                     <span>arXiv</span>
                   </a>
                 </span>
-                
+<!--
                 <span class="link-block">
                   <a href="https://github.com/jsu27/decomp_diffusion"
                     class="external-link button is-normal is-rounded is-dark">
